[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.149"
simple-websockets = "0.1.6"
uuid = "1.23.0"
shared = { path = "../shared" }
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
anyhow = "1.0.102"
