[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
uuid = "1.23.0"
shared = { path = "../shared" }
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
dashmap = "6.1.0"
